--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Alura Plus</title>
 </head>
 
@@ -11,7 +11,7 @@
     <section class="container principal">
         <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./estilos/imagens/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua" class="container__img">
+            <img src="Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua" class="container__img">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
@@ -19,7 +19,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="./estilos/imagens/Plataformas.png" alt="Um monitor e um celular com alura plus aberto" class="secundario__img">
+        <img src="Plataformas.png" alt="Um monitor e um celular com alura plus aberto" class="secundario__img">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa selação de cursos não para de crescer.</p>
@@ -31,11 +31,11 @@
             <p class="container__duvidas">Só o Combo+ oferece Alura+ e Alura Língua juntos você pode ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a class="secundario__botao" href="www.alura.com.br">Assine o Combo+</a>
         </div>
-        <img src="./estilos/imagens/Telas.png" alt="Tela da Alura+ e Alura Língua" class="terciario__img">
+        <img src="Telas.png" alt="Tela da Alura+ e Alura Língua" class="terciario__img">
     </section>
 
     <section class="container quaternario">
-        <img src="./estilos/imagens/Notebook.png" alt="Notebook com o Alura+" class="quaternario__img">
+        <img src="Notebook.png" alt="Notebook com o Alura+" class="quaternario__img">
         <div class="container__descricao__dicas">
             <h2 class="container__dicas">Baixe seus cursos</h2>
             <p class="descricao__dicas">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet. </p>
@@ -46,22 +46,22 @@
         <h2 class="dispositivos__titulos">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="./estilos/imagens/tv.png" alt="Ícone de televisão">
+                <img src="tv.png" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="./estilos/imagens/computador.png" alt="Ícone de computador">
+                <img src="computador.png" alt="Ícone de computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="./estilos/imagens/celular.png" alt="Ícone de celular">
+                <img src="celular.png" alt="Ícone de celular">
                 <h3 class="lista__item">Celular</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="./estilos/imagens/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="Logo.png" alt="Alura+" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idioma</a>
